--- a/Security/7-VPN.tex
+++ b/Security/7-VPN.tex
@@ -181,7 +181,7 @@ The configuration tasks for the topology in figure \ref{VPNtopolgy} are shown in
 \item Identify interesting traffic: Configure ACL to identify the traffic from the LAN on R1 to the LAN on R3 as interesting. This interesting
 traffic will trigger the IPsec VPN to be implemented when there is traffic between the R1 to R3 LANs.
 \item Configure the IKE Phase 1 ISAKMP policy on R1 (encryption method, key exchange method, and DH method)
-\item Configure the IKE Phase 2 IPsec policy on R1. First, we create the transform-set VPN-SET to use esp-aes and esp-sha-hmac. Next, a crypto map VPN-MAP is created to bind all of the Phase 2 parameters together. Use sequence number 10 and identify it as an ipsec-isakmp map.
+\item Configure the IKE Phase 2 IPsec policy on R1. First, we create the transform-set VPN-SET to use esp-aes and esp-sha-hmac. Next, a crypto map VPN-MAP is created to bind all of the Phase 2 parameters together. Use sequence number 10 and identify it as an ipsec-isakmp map. In the following commands,	the perfect forwarding secrecy type is set using the \code{set pfs} command.
 \item Configure the crypto map on the outgoing interface.
 \item Repeat the above steps on R3.
 \end{enumerate}
@@ -191,14 +191,14 @@ traffic will trigger the IPsec VPN to be implemented when there is traffic betwe
 license boot module c1900 technology-package securityk9
 
 #STEP 3
-access-list 110 permit ip 192.168.1.0 0.0.0.255 192.168.3.0
-0.0.0.255
+access-list 110 permit ip 192.168.1.0 0.0.0.255 192.168.3.0 0.0.0.255
 
 #STEP 4
 crypto isakmp policy 10
+	hash sha 
 	encryption aes 256
 	authentication pre-share
-	group 5
+	group 14
 	exit
 crypto isakmp key vpnpa55 address 10.2.2.2	
 
@@ -207,7 +207,9 @@ crypto ipsec transform-set VPN-SET esp-aes esp-sha-hmac
 crypto map VPN-MAP 10 ipsec-isakmp
 	description VPN connection to R3
 	set peer 10.2.2.2
-	set transform-set VPN-set
+	set transform-set VPN-SET
+	set pfs group14
+	set security-association lifetime seconds 900 
 	match address 110
 	exit
 
@@ -217,6 +219,8 @@ interface s0/0/0
 	exit
 
 #VERIFICATION
+show crypto ipsec transform-set 
+show crypto map
 show crypto isakmp sa
 show crypto ipsec sa		
 \end{sexylisting}
